2000-02-25  Larry Jones  <larry.jones@sdrc.com>

	* import.c (add_rcs_file): Don't abort just because lstat fails.

2000-02-16  Jim Meyering  <meyering@lucent.com>

	Avoid race condition whereby a catchable signal could
	end up corrupting the repository.
	* commit.c (checkaddfile): Put a critical section around the code
	that handles the first commit on the trunk of a file that's already
	been committed on a branch.
	* cvs.h (Sig_inCrSect): Declare new function.

2000-02-21  Karl Fogel  <kfogel@red-bean.com>

	* main.c (main): still check for repository, but not history file
	(correction to 2000-02-18 change -- that's what I get for
	believing the comment rather than the code).

2000-02-21  K.J. Paradise <kj@sourcegear.com>

	* history.c mkmodules.c parseinfo.c: control which actions
	get logged to the cvs history file via CVSROOT/config file
	and LogHistory keyword. (John P Cavanaugh <cavanaug@sr.hp.com>)

2000-02-18  Karl Fogel  <kfogel@red-bean.com>

	* history.c (history_write): don't die if history file not
	writable, just warn (unless `really_quiet') and skip out.

	* main.c (main): don't bother checking if history file is
	writable.

	* server.c (serve_root): same.

2000-02-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (perms symlinks symlinks2 hardlinks): Don't run by
	default since PreservePermissions code is now disabled.

2000-02-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (import-113): Revise to match Jim Meyering's fix.

2000-02-16  Larry Jones  <larry.jones@sdrc.com>

	* add.c (add): Don't allow adding files or directories to Emptydir.
	(Patch submitted by Chris Cameron <chris.cameron@ot.co.nz>.)
	* sanity.sh (emptydir): Revise (emptydir-7 and emptydir-8) for this.

2000-02-16  Jim Meyering  <meyering@lucent.com>

	* update.c (join_file): Correct typo in diagnostic:
	change `file %s is present...' to `file %s is not present...'.

2000-02-10  Larry Jones  <larry.jones@sdrc.com>
